# music-player

./: Cargo.toml  package-lock.json  package.json
public/: index.html
public/static/: main.js
src/: main.rs
static/: styles.css
