[package]
name = "music-player"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["multipart"] }
socketioxide = "0.15.1"
symphonia = "0.5.4"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.1", features = ["fs"] }
